# runerec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utils.cc  Utils.h  factory.cc  factory.h  main.cc
Classifiers/: Classifier.cc  Classifier.h  Classifier_Internal.h  LocalCaffeDigitClassifier.h  LocalOpenCVDnnDigitClassifier.cc  LocalOpenCVDnnDigitClassifier.h  LocalTFDigitClassifier.h  LocalTensorRTDigitClassifier.cc  LocalTensorRTDigitClassifier.h  common.h
Splitters/: FireRuneSplitter.cc  FireRuneSplitter.h  LedRuneSplitter.cc  LedRuneSplitter.h  PureRuneSplitter.cc  PureRuneSplitter.h  RuneSplitter.cc  RuneSplitter.h  Splitter.h
tests/: CMakeLists.txt  classifier_test.cc
